--- a/index.html
+++ b/index.html
@@ -11,14 +11,9 @@
 <body>
     <!-- Cabeçalho -->
     <header>
-        <a href="#" class="logo">Dia dos Namorados 💘</a>
+        <a href="#" class="logo">Surpresa!</a>
         <nav class="nav">
-            <a href="#home">Início</a>
-            <a href="#reasons">Motivos</a>
-            <a href="#memories">Lembranças</a>
-            <a href="#question">Pedido</a>
-            <a href="#about">Sobre Nós</a>
-        </nav>
+
     </header>
 
     <!-- Início -->
@@ -41,22 +36,22 @@
 
     <!-- Motivos -->
     <section class="reasons" id="reasons">
-        <h2>Por que <span>você é especial?</span></h2>
+        <h2>Por que <span>você é especial para mim</span></h2>
         <div class="reasons-container">
             <div class="reason-box">
                 <i class='bx bx-heart'></i>
                 <h3>Seu sorriso</h3>
-                <p>Ele ilumina meus dias e me dá paz.</p>
+                <p>Ele ilumina meu mundo.</p>
             </div>
             <div class="reason-box">
                 <i class='bx bx-happy'></i>
                 <h3>Sua companhia</h3>
-                <p>Com você, qualquer lugar é o melhor lugar do mundo.</p>
+                <p>Com você, eu desejo que o tempo nunca passe.</p>
             </div>
             <div class="reason-box">
                 <i class='bx bx-star'></i>
                 <h3>Seu jeitinho único</h3>
-                <p>Você é diferente de tudo que já conheci. E isso me encanta todos os dias.</p>
+                <p>Você é diferente de todas que já conheci. E isso me encanta todos os dias.</p>
             </div>
         </div>
     </section>
@@ -68,8 +63,8 @@
             <div class="memory-box">
                 <img src="./Assets/viagem1.jpg" alt="Primeira viagem">
                 <div class="memory-layer">
-                    <h4>Primeira Viagem</h4>
-                    <p>Nosso começo incrível.</p>
+                    <h4>Primeira Foto</h4>
+                    <p>Nossa primeira foto foi incrível.</p>
                 </div>
             </div>
             <div class="memory-box">
@@ -117,7 +112,7 @@
 
     <!-- Rodapé -->
     <footer>
-        <p style="text-align: center;">Feito com muito amor para você 💗</p>
+        <p style="text-align: center;">Você vai escolher "não" mesmo? </p>
     </footer>
 
     <script src="./JS/script.js"></script>
