--- a/site2.html
+++ b/site2.html
@@ -15,7 +15,7 @@
 
     <section class="home">
         <div class="home-content">
-            <h1>Uhuul! Você disse SIM!</h1>
+            <h1>Você disse SIM!</h1>
             <p> Eu sabia que você era a pessoa certa! 💕</p>
             <div class="social-media">
             
@@ -24,7 +24,9 @@
     </section>
 
     <footer>
-        <p style="text-align: center;">Acabei de ganhar o melhor motivo para viver minha vida. Se eu tivesse 1 milhão de vidas diferentes eu com certeza escolheria viver ao seu lado. TE AMO PARA SEMPRE! 💖</p>
+        <p style="text-align: center;">Acabei de ganhar o melhor motivo para viver minha vida. Se eu tivesse 1 milhão de vidas diferentes eu com certeza escolheria viver ao seu lado. TE AMO PARA SEMPRE! 💗</p>
+
+        <img src="./Assets/UrsinhoFelizUsinhaBranca.png" alt="UrsinhoFeliz">
     </footer>
 </body>
 </html>
