--- a/site3.html
+++ b/site3.html
@@ -15,20 +15,18 @@
 
     <section class="home">
         <div class="home-content">
-            <h1>Você disse NÃO...</h1>
+            <h1>Você disse mesmo "NÃO"?</h1>
             <p>Eu não consigo aceitar um "NÃO" de uma garota tão linda igual você 💔</p>
             <div class="social-media">
-                <img src="./Assets/UrsinhoTriste-removebg-preview.png" alt="UrsinhoTriste">
+                <img src="Assets/UrsoTriste.png" alt="UrsoTriste">
             </div>
         </div>
-
     </section>
 
     <footer>
         <p style="text-align: center;">Certeza mesmo? 💔</p>
-   <div style="text-align: center; margin-top: 20px;">
-            <a href="index.html" class="btn">Mudei de Ideia...</a> 
-         <!-- Botão para redirecionar para o Site 1 -->
+        <div style="text-align: center; margin-top: 20px;">
+            <a href="index.html" class="btn">Mudei de Ideia...</a>
         </div>
     </footer>
 </body>
