--- a/site2.html
+++ b/site2.html
@@ -16,17 +16,27 @@
     <section class="home">
         <div class="home-content">
             <h1>Você disse SIM!</h1>
-            <p> Eu sabia que você era a pessoa certa! 💕</p>
+            <p>Eu sabia que você era a pessoa certa! 💕</p>
             <div class="social-media">
-            
+                <!-- Pode adicionar redes sociais aqui -->
             </div>
         </div>
     </section>
 
     <footer>
-        <p style="text-align: center;">Acabei de ganhar o melhor motivo para viver minha vida. Se eu tivesse 1 milhão de vidas diferentes eu com certeza escolheria viver ao seu lado. TE AMO PARA SEMPRE! 💗</p>
+        <p style="text-align: center;">
+            Acabei de ganhar o melhor motivo para viver minha vida. 
+            Se eu tivesse 1 milhão de vidas diferentes eu com certeza escolheria viver ao seu lado. 
+            TE AMO PARA SEMPRE! 💗
+        </p>
 
-        <img src="./Assets/UrsinhoFelizUsinhaBranca.png" alt="UrsinhoFeliz">
+        <img src="Assets/UrsoFeliz.png" alt="UrsinhoFeliz">
+
+                <div style="text-align: center; margin-top: 20px;">
+            <a href="index.html" class="btn">EU TE AMO</a>
+        </div>
+
+
     </footer>
 </body>
 </html>
