--- a/site2.html
+++ b/site2.html
@@ -30,7 +30,7 @@
             TE AMO PARA SEMPRE! 💗
         </p>
 
-        <img src="Assets/UrsoFeliz.png" alt="UrsinhoFeliz">
+        <img src="Assets/ursofeliz.png" alt="ursinhofeliz">
 
                 <div style="text-align: center; margin-top: 20px;">
             <a href="index.html" class="btn">EU TE AMO</a>
