--- a/site2.html
+++ b/site2.html
@@ -17,9 +17,6 @@
         <div class="home-content">
             <h1>Você disse SIM!</h1>
             <p>Eu sabia que você era a pessoa certa! 💕</p>
-            <div class="social-media">
-                <!-- Pode adicionar redes sociais aqui -->
-            </div>
         </div>
     </section>
 
@@ -30,13 +27,11 @@
             TE AMO PARA SEMPRE! 💗
         </p>
 
-        <img src="Assets/ursofeliz.png" alt="ursinhofeliz">
+        <img src="./Assets/ursofeliz.png" alt="ursofeliz">
 
-                <div style="text-align: center; margin-top: 20px;">
+        <div style="text-align: center; margin-top: 20px;">
             <a href="index.html" class="btn">EU TE AMO</a>
         </div>
-
-
     </footer>
 </body>
 </html>
