--- a/site3.html
+++ b/site3.html
@@ -18,7 +18,7 @@
             <h1>Você disse mesmo "NÃO"?</h1>
             <p>Eu não consigo aceitar um "NÃO" de uma garota tão linda igual você 💔</p>
             <div class="social-media">
-                <img src="Assets/ursotriste.png" alt="ursotriste">
+                <img src="./Assets/ursotriste.png" alt="ursotriste">
             </div>
         </div>
     </section>
