--- a/site3.html
+++ b/site3.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Você Disse NÃO...</title>
-    <link rel="shortcut icon" href="#" type="image/x-icon">
+    <link rel="shortcut icon" href="Assets/favicon.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style3.css">
 </head>
 <body>
+
     <header>
         <a href="#" class="logo">Sério?</a>
     </header>
@@ -18,7 +19,7 @@
             <h1>Você disse mesmo "NÃO"?</h1>
             <p>Eu não consigo aceitar um "NÃO" de uma garota tão linda igual você 💔</p>
             <div class="social-media">
-                <img src="./Assets/ursotriste.png" alt="ursotriste">
+                <img src="Assets/ursotriste.png" alt="Urso triste">
             </div>
         </div>
     </section>
@@ -27,7 +28,9 @@
         <p style="text-align: center;">Certeza mesmo? 💔</p>
         <div style="text-align: center; margin-top: 20px;">
             <a href="index.html" class="btn">Mudei de Ideia...</a>
+            <a href="site4.html" class="btn nao-btn">Não... definitivo 😭</a>
         </div>
     </footer>
+
 </body>
 </html>
