--- a/site2.html
+++ b/site2.html
@@ -30,7 +30,7 @@
         <img src="./Assets/ursofeliz.png" alt="ursofeliz">
 
         <div style="text-align: center; margin-top: 20px;">
-            <a href="index.html" class="btn">EU TE AMO</a>
+            <a href="https://wa.me/+5516988407801" class="btn">EU TE AMO!</a>
         </div>
     </footer>
 </body>
