--- a/site2.html
+++ b/site2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Você Aceitou! 💖</title>
-    <link rel="shortcut icon" href="#" type="image/x-icon">
+    <link rel="shortcut icon" href="Assets/favicon.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style2.css">
 </head>
@@ -27,7 +27,7 @@
             TE AMO PARA SEMPRE! 💗
         </p>
 
-        <img src="./Assets/ursofeliz.png" alt="ursofeliz">
+        <img src="Assets/ursofeliz.png" alt="Urso feliz">
 
         <div style="text-align: center; margin-top: 20px;">
             <a href="https://wa.me/+5516988407801" class="btn">EU TE AMO!</a>
