--- a/site2.html
+++ b/site2.html
@@ -23,14 +23,15 @@
     <footer>
         <p style="text-align: center;">
             Acabei de ganhar o melhor motivo para viver minha vida. 
+
+        <img src="Assets/ursofeliz.png" alt="Urso feliz"><img>
+
             Se eu tivesse 1 milhão de vidas diferentes eu com certeza escolheria viver ao seu lado. 
             TE AMO PARA SEMPRE! 💗
         </p>
 
-        <img src="Assets/ursofeliz.png" alt="Urso feliz">
-
         <div style="text-align: center; margin-top: 20px;">
-            <a href="https://wa.me/+5516988407801" class="btn">EU TE AMO!</a>
+            <a href="https://wa.me/+5516988407801" class="btn">EU TE AMO! 💕</a>
         </div>
     </footer>
 </body>
