--- a/site3.html
+++ b/site3.html
@@ -17,9 +17,11 @@
     <section class="home">
         <div class="home-content">
             <h1>Você disse mesmo "NÃO"?</h1>
+
+            <img src="Assets/ursotriste.png" alt="Urso triste"><img>
+
             <p>Eu não consigo aceitar um "NÃO" de uma garota tão linda igual você 💔</p>
             <div class="social-media">
-                <img src="Assets/ursotriste.png" alt="Urso triste">
             </div>
         </div>
     </section>
