--- a/site4.html
+++ b/site4.html
@@ -19,6 +19,7 @@
             <h1>VOCÊ DISSE "NÃO"... DE NOVO?</h1>
             <p>Isso parte meu coraçãozinho... Como você tem coragem? 💔</p>
             <a href="index.html" class="btn">Quer tentar mais uma vez? 🥺</a>
+            <a href="site5.html" class="btn nao-btn">Não definitivo 💔</a>
         </div>
     </section>
 
