--- a/site2.html
+++ b/site2.html
@@ -24,7 +24,7 @@
         <p style="text-align: center;">
             Acabei de ganhar o melhor motivo para viver minha vida. 
 
-        <img src="Assets/ursofeliz.png" alt="Urso feliz"><img>
+        <img src="assets/ursofeliz.png" alt="urso feliz"><img>
 
             Se eu tivesse 1 milhão de vidas diferentes eu com certeza escolheria viver ao seu lado. 
             TE AMO PARA SEMPRE! 💗
