--- a/site2.html
+++ b/site2.html
@@ -16,6 +16,9 @@
     <section class="home">
         <div class="home-content">
             <h1>Você disse SIM!</h1>
+
+            <img src="assets/ursofeliz.png" alt="urso feliz"><img>
+
             <p>Eu sabia que você era a pessoa certa! 💕</p>
         </div>
     </section>
