--- a/site4.html
+++ b/site4.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Você disse NÃO... de novo? 😭</title>
     <link rel="shortcut icon" href="Assets/favicon.png" type="image/x-icon">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style4.css">
 </head>
 <body>
@@ -18,8 +18,10 @@
         <div class="home-content">
             <h1>VOCÊ DISSE "NÃO"... DE NOVO?</h1>
             <p>Isso parte meu coraçãozinho... Como você tem coragem? 💔</p>
-            <a href="index.html" class="btn">Quer tentar mais uma vez? 🥺</a>
-            <a href="site5.html" class="btn nao-btn">Não definitivo 💔</a>
+            <div class="button-group">
+                <a href="index.html" class="btn">Quer tentar mais uma vez? 🥺</a>
+                <a href="site5.html" class="btn nao-btn">Não definitivo 💔</a>
+            </div>
         </div>
     </section>
 
