--- a/index.html
+++ b/index.html
@@ -3,31 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surpresa!</title>
-    <link rel="shortcut icon" href="#" type="image/x-icon">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>Surpresa! 💖</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- Fundo de corações -->
+    <div class="background-hearts">
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+    </div>
+
     <!-- Cabeçalho -->
     <header>
-        <a href="#" class="logo">Surpresa!</a>
-        <nav class="nav">
-
+        <a href="#" class="logo">Surpresa! 💖</a>
     </header>
 
     <!-- Início -->
     <section class="home" id="home">
         <div class="home-content">
             <h3>Oi 💕</h3>
-
             <h1>Tenho algo pra te dizer</h1>
-
             <h3><span> Espero que goste ❤️</span></h3>
-
-            <p> Desde o momento em que nossos olhares se cruzaram, o mundo ao meu redor parou. E eu soube, com toda a certeza, que o destino nos uniu de uma maneira única. Cada sorriso seu é como uma melodia que toca meu coração, e cada instante ao seu lado é um presente que eu quero guardar para sempre. Você é minha razão de sorrir, de acreditar no amor, e eu sou infinitamente grato por compartilhar a vida com alguém tão especial como você.</p>
-
-           
+            <p>Desde o momento em que nossos olhares se cruzaram, o mundo ao meu redor parou. E eu soube, com toda a certeza, que o destino nos uniu de uma maneira única. Cada sorriso seu é como uma melodia que toca meu coração, e cada instante ao seu lado é um presente que eu quero guardar para sempre. Você é minha razão de sorrir, de acreditar no amor, e eu sou infinitamente grato por compartilhar a vida com alguém tão especial como você.</p>
         </div>
         <div class="home-img">
             <img src="./Assets/casal-apaixonado.png" alt="Foto nossa">
@@ -39,82 +45,45 @@
         <h2>Por que <span>você é especial para mim</span></h2>
         <div class="reasons-container">
             <div class="reason-box">
-                <i class='bx bx-heart'></i>
                 <h3>Seu sorriso</h3>
                 <p>Ele ilumina meu mundo.</p>
             </div>
             <div class="reason-box">
-                <i class='bx bx-happy'></i>
                 <h3>Sua companhia</h3>
                 <p>Com você, eu desejo que o tempo nunca passe.</p>
             </div>
             <div class="reason-box">
-                <i class='bx bx-star'></i>
                 <h3>Seu jeitinho único</h3>
                 <p>Você é diferente de todas que já conheci. E isso me encanta todos os dias.</p>
             </div>
         </div>
     </section>
 
-    <!-- Lembranças -->
-    <section class="memories" id="memories">
-        <h2>Nossas <span>Lembranças</span></h2>
-        <div class="memories-container">
-            <div class="memory-box">
-                <img src="./Assets/viagem1.jpg" alt="Primeira viagem">
-                <div class="memory-layer">
-                    <h4>Primeira Foto</h4>
-                    <p>Nossa primeira foto foi incrível.</p>
-                </div>
-            </div>
-            <div class="memory-box">
-                <img src="./Assets/encontro2.jpg" alt="Nosso Encontro">
-                <div class="memory-layer">
-                    <h4>Nosso Encontro</h4>
-                    <p>A noite que mudou tudo.</p>
-                </div>
-            </div>
-            <div class="memory-box">
-                <img src="./Assets/sorriso.jpg" alt="Seu Sorriso">
-                <div class="memory-layer">
-                    <h4>Seu Sorriso</h4>
-                    <p>O motivo de eu sorrir também.</p>
-                </div>
-            </div>
+    <!-- Sobre nós -->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="./Assets/nos2.png" alt="foto casal">
+        </div>
+        <div class="about-content">
+            <h3>Sobre Nós</h3>
+            <h1>Dois corações <span>e um destino</span></h1>
+            <p>Conhecer você foi a melhor coisa que aconteceu na minha vida. Tudo em você me faz querer viver intensamente cada segundo ao seu lado. Obrigado por existir e me fazer tão feliz!</p>
         </div>
     </section>
 
- <!-- Sobre nós -->
-<section class="about" id="about">
-    <div class="about-img">
-        <img src="./Assets/nos2.png" alt="foto casal">
-    </div>
-    <div class="about-content">
-        <h3>Sobre Nós</h3>
-        <h1>Dois corações <span>e um destino</span></h1>
-        <p>
-            Conhecer você foi a melhor coisa que aconteceu na minha vida. Tudo em você me faz querer viver intensamente cada segundo ao seu lado. Obrigado por existir e me fazer tão feliz!
-        </p>
-    </div>
-</section>
-
-<!-- Pedido de Namoro (Agora depois de "Sobre Nós") -->
-<section class="contact" id="question">
-    <h2>Quer <span>Namorar Comigo?</span></h2>
-    <form>
+    <!-- Pedido de namoro -->
+    <section class="contact" id="question">
+        <h2>Quer <span>Namorar Comigo?</span></h2>
         <div class="button-group">
             <a href="site2.html" class="btn">SIM!</a>
             <a href="site3.html" class="btn">NÃO</a>
         </div>
-    </form>
-</section>
-
+    </section>
 
     <!-- Rodapé -->
     <footer>
-        <p style="text-align: center;">Você vai escolher "não" mesmo? </p>
+        <p>Você vai escolher "não" mesmo? 😢</p>
     </footer>
 
-    <script src="./JS/script.js"></script>
 </body>
 </html>
