--- a/site2.html
+++ b/site2.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+
+    <div class="background-hearts">
+    <span>💕</span>
+    <span>💕</span>
+    <span>💕</span>
+    <span>💕</span>
+    <span>💕</span>
+    <span>💕</span>
+    <span>💕</span>
+    <span>💕</span>
+    <span>💕</span>
+    <span>💕</span>
+    </div>
+
+
     <header>
         <a href="#" class="logo">Você Aceitou! 💖</a>
     </header>
