--- a/site3.html
+++ b/site3.html
@@ -10,28 +10,42 @@
 </head>
 <body>
 
+    <!-- Corações caindo -->
+    <div class="background-hearts">
+        <span>💔</span>
+        <span>💔</span>
+        <span>💔</span>
+        <span>💔</span>
+        <span>💔</span>
+        <span>💔</span>
+        <span>💔</span>
+        <span>💔</span>
+        <span>💔</span>
+        <span>💔</span>
+    </div>
+
+    <!-- Cabeçalho -->
     <header>
         <a href="#" class="logo">Sério?</a>
     </header>
 
+    <!-- Conteúdo -->
     <section class="home">
         <div class="home-content">
             <h1>Você disse mesmo "NÃO"?</h1>
-
-            <img src="assets/ursotriste.png" alt="urso triste"><img>
-
+            <img src="assets/ursotriste.png" alt="Urso triste">
             <p>Eu não consigo aceitar um "NÃO" de uma garota tão linda igual você 💔</p>
-            <div class="social-media">
+
+            <div class="button-group">
+                <a href="index.html" class="btn">Mudei de ideia...</a>
+                <a href="site4.html" class="btn nao-btn">Ainda Não... 😭</a>
             </div>
         </div>
     </section>
 
+    <!-- Rodapé -->
     <footer>
-        <p style="text-align: center;">Certeza mesmo? 💔</p>
-        <div style="text-align: center; margin-top: 20px;">
-            <a href="index.html" class="btn">Mudei de Ideia...</a>
-            <a href="site4.html" class="btn nao-btn">Não... definitivo 😭</a>
-        </div>
+        <p>Acho que você clicou errado... né? 😢</p>
     </footer>
 
 </body>
