--- a/site4.html
+++ b/site4.html
@@ -10,10 +10,20 @@
 </head>
 <body>
 
+    <!-- Corações caindo -->
+    <div class="background-hearts">
+        <span>💔</span><span>💔</span><span>💔</span><span>💔</span><span>💔</span>
+        <span>💔</span><span>💔</span><span>💔</span><span>💔</span><span>💔</span>
+        <span>💔</span><span>💔</span><span>💔</span><span>💔</span><span>💔</span>
+        <span>💔</span><span>💔</span><span>💔</span><span>💔</span><span>💔</span>
+    </div>
+
+    <!-- Cabeçalho -->
     <header>
         <a href="#" class="logo">Não acredito 😭</a>
     </header>
 
+    <!-- Conteúdo -->
     <section class="home">
         <div class="home-content">
             <h1>VOCÊ DISSE "NÃO"... DE NOVO?</h1>
@@ -25,6 +35,7 @@
         </div>
     </section>
 
+    <!-- Rodapé -->
     <footer>
         <p>Acho que você clicou errado... né? 😢</p>
     </footer>
