--- a/site5.html
+++ b/site5.html
@@ -10,10 +10,20 @@
 </head>
 <body>
 
+    <!-- Corações caindo -->
+    <div class="background-hearts">
+        <span>💔</span><span>💔</span><span>💔</span><span>💔</span><span>💔</span>
+        <span>💔</span><span>💔</span><span>💔</span><span>💔</span><span>💔</span>
+        <span>💔</span><span>💔</span><span>💔</span><span>💔</span><span>💔</span>
+        <span>💔</span><span>💔</span><span>💔</span><span>💔</span><span>💔</span>
+    </div>
+
+    <!-- Cabeçalho -->
     <header>
         <a href="#" class="logo">Você realmente não clicou errado... 💔</a>
     </header>
 
+    <!-- Conteúdo -->
     <section class="home">
         <div class="home-content">
             <h1>VOCÊ DISSE "NÃO" MESMO...</h1>
@@ -22,6 +32,7 @@
         </div>
     </section>
 
+    <!-- Rodapé -->
     <footer>
         <p>Tudo bem... Não se sinta triste ou culpada. 😢</p>
     </footer>
