--- a/site2.html
+++ b/site2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Você Aceitou! 💖</title>
+    <title>Você Aceitou!💖</title>
     <link rel="shortcut icon" href="Assets/favicon.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style2.css">
@@ -45,9 +45,9 @@
             Se eu tivesse 1 milhão de vidas diferentes eu com certeza escolheria viver ao seu lado. 
             TE AMO PARA SEMPRE! 💗
         </p>
-
+        <P>Agora, quer jogar um jogo comigo?</P>
         <div style="text-align: center; margin-top: 20px;">
-            <a href="https://wa.me/+5516988407801" class="btn">EU TE AMO! 💕</a>
+            <a href="jogo.html" class="btn">SIM!💕</a>
         </div>
     </footer>
 </body>
