--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>Desde o momento em que nossos olhares se cruzaram, o mundo ao meu redor parou. E eu soube, com toda a certeza, que o destino nos uniu de uma maneira única. Cada sorriso seu é como uma melodia que toca meu coração, e cada instante ao seu lado é um presente que eu quero guardar para sempre. Você é minha razão de sorrir, de acreditar no amor, e eu sou infinitamente grato por compartilhar a vida com alguém tão especial como você.</p>
         </div>
         <div class="home-img">
-            <img src="./Assets/casal-apaixonado.png" alt="Foto nossa">
+            <img src="./Assets/foto1.png" alt="foto1">
         </div>
     </section>
 
@@ -62,7 +62,7 @@
     <!-- Sobre nós -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="./Assets/nos2.png" alt="foto casal">
+            <img src="./Assets/foto2.png" alt="foto2">
         </div>
         <div class="about-content">
             <h3>Sobre Nós</h3>
