--- a/site4.html
+++ b/site4.html
@@ -23,7 +23,7 @@
 
     <section class="home">
         <div class="home-content">
-            <h1>VOCÊ DISSE "NÃO"... DE NOVO?</h1>
+            <h1>Você disse "NÃO"... de novo?</h1>
             <p>Isso parte meu coraçãozinho... Como você tem coragem? 💔</p>
             <div class="button-group">
                 <a href="index.html" class="btn">Quer tentar mais uma vez? 🥺</a>
@@ -33,7 +33,7 @@
     </section>
 
     <footer>
-        <p>Acho que você clicou errado... né? 😢</p>
+        <p>Talvez você... Clicou errado de novo... né? 😢</p>
     </footer>
 
 </body>
