--- a/site5.html
+++ b/site5.html
@@ -23,7 +23,7 @@
 
     <section class="home">
         <div class="home-content">
-            <h1>VOCÊ DISSE "NÃO" MESMO...</h1>
+            <h1>Você disse "NÃO" mesmo...</h1>
             <p>Você destruiu meu coração em cacos... 💔</p>
             <a href="https://wa.me/+5516988407801" class="btn">Desculpa... não é recíproco 💔</a>
         </div>
