--- a/site2.html
+++ b/site2.html
@@ -4,25 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Você Aceitou!💖</title>
-    <link rel="shortcut icon" href="Assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
 
     <div class="background-hearts">
-    <span>💕</span>
-    <span>💕</span>
-    <span>💕</span>
-    <span>💕</span>
-    <span>💕</span>
-    <span>💕</span>
-    <span>💕</span>
-    <span>💕</span>
-    <span>💕</span>
-    <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
+        <span>💕</span>
     </div>
-
 
     <header>
         <a href="#" class="logo">Você Aceitou! 💖</a>
@@ -32,7 +31,7 @@
         <div class="home-content">
             <h1>Você disse SIM!</h1>
 
-            <img src="assets/ursofeliz.png" alt="urso feliz"><img>
+            <img src="assets/ursofeliz.png" alt="urso feliz">
 
             <p>Eu sabia que você era a pessoa certa! 💕</p>
         </div>
@@ -45,7 +44,7 @@
             Se eu tivesse 1 milhão de vidas diferentes eu com certeza escolheria viver ao seu lado. 
             TE AMO PARA SEMPRE! 💗
         </p>
-        <P>Agora, quer jogar um jogo comigo?</P>
+        <p>Agora, quer jogar um jogo comigo?</p>
         <div style="text-align: center; margin-top: 20px;">
             <a href="jogo.html" class="btn">SIM!💕</a>
         </div>
