--- a/site3.html
+++ b/site3.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Você Disse NÃO...</title>
-    <link rel="shortcut icon" href="Assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style3.css">
 </head>
 <body>
 
-    <!-- Corações caindo -->
     <div class="background-hearts">
         <span>💔</span>
         <span>💔</span>
@@ -24,16 +23,16 @@
         <span>💔</span>
     </div>
 
-    <!-- Cabeçalho -->
     <header>
         <a href="#" class="logo">Sério?</a>
     </header>
 
-    <!-- Conteúdo -->
     <section class="home">
         <div class="home-content">
             <h1>Você disse mesmo "NÃO"?</h1>
+
             <img src="assets/ursotriste.png" alt="Urso triste">
+
             <p>Eu não consigo aceitar um "NÃO" de uma garota tão linda igual você 💔</p>
 
             <div class="button-group">
@@ -43,7 +42,6 @@
         </div>
     </section>
 
-    <!-- Rodapé -->
     <footer>
         <p>Acho que você clicou errado... né? 😢</p>
     </footer>
